# text-bubble

./: .gitignore  README.md  bubble_infer.py  bubble_pipeline.py  bubble_render.py  pyproject.toml  requirements.txt
assets/: bubble_assets.json
bubble/: assets.py  cli.py  editor_models.py  editor_render.py  editor_review.py  editor_server.py  evaluate.py  glyph_paths.py  infer.py  layout.py  llm.py  models.py  procedural_bubbles.py  render.py  scene_runtime.py  text_render_resvg_hybrid.py  ucd_vertical_orientation.py  validation.py  vertical_uax.py  worker_client.py  worker_server.py
docs/: bubble_pipeline.md  dialogue_examples.txt  environment.md  refactoring_plan.md  やりたいこと.md
prompts/: evaluate_final_prompt.md  evaluate_prompt.md  evaluate_test_cases.json  evaluate_text_prompt.md  manga_dialogue_column_split_prompt.md  planner_system.txt  planner_user.txt  reflow_examples.json  reflow_system.txt  reflow_test_cases.json  reflow_user.txt  scene_user.txt
scripts/: audit_vertical_font.py  beam_search_scene_solver.py  codex_scene_poc.py  compare_union_backends.py  cp_sat_scene_solver.py  debug_shout_rect_overlay.py  download_model.sh  poc_make_test_masks.py  poc_pathkit_union.py  poc_resvg_vertical_cli.py  poc_scene_place_from_masks.py  poc_svg_vertical_cases.json  poc_vertical_render.py  poc_vertical_shape_probe.py  prompt_images.py  render_bubble_debug_from_summary.py  render_merge_pattern_suite.py  render_single_shout_rect.py  render_square_bubble_experiment.py  render_vertical_golden.py  rerender_shout_rect_test.py  run_cp_sat_batch.py  run_server.sh  (+5 more)
(+41 files in other folders)
