[project]
name = "text-bubble"
version = "0.1.0"
description = "Generate vertical manga-style speech bubbles from images."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "Pillow>=10.4.0",
    "numpy>=1.26.0",
    "playwright>=1.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
text-bubble = "bubble.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bubble"]
