[project]
name = "text-bubble"
version = "0.1.0"
description = "Generate vertical manga-style speech bubbles from images."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "typer>=0.15",
    "uvicorn>=0.30.0",
    "Pillow>=10.4.0",
    "numpy>=1.26.0",
    "playwright>=1.52.0",
    "uharfbuzz>=0.40.0",
    "fonttools>=4.58.0",
    "regex>=2024.5.15",
    "skia-pathops>=0.8.0.post2",
    "ortools>=9.15.6755",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
text-bubble = "bubble.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bubble"]
